--- a/oxford-buses/oxfordBuses/src/main/AndroidManifest.xml
+++ b/oxford-buses/oxfordBuses/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="uk.co.jakeclarke.oxfordbuses"
+    package="com.samlanning.oxfordbuses"
     android:versionCode="6"
     android:versionName="2.0.3" >
 
@@ -21,10 +21,10 @@ s
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <permission
-        android:name="uk.co.jakeclarke.oxfordbuses.permission.MAPS_RECEIVE"
+        android:name="com.samlanning.oxfordbuses.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="uk.co.jakeclarke.oxfordbuses.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.samlanning.oxfordbuses.permission.MAPS_RECEIVE" />
     <uses-feature android:glEsVersion="0x00020000"/>
 
     <application
